--- a/vievent/index.html
+++ b/vievent/index.html
@@ -45,7 +45,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-1">
-                        <a href="index.html" class="nav-item nav-link">About</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
+			<a href="about.html" class="nav-item nav-link">About</a>
                         <div class="nav-item dropdown">
                             <a href="service.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
