--- a/vievent/testimonial.html
+++ b/vievent/testimonial.html
@@ -111,7 +111,7 @@
                             <p class="text-judgegrey">Sangat Bagus</p>
                             <div class="d-flex align-items-center">
                                 <div class="ps-3">
-                                    <h5 class="mb-1 text-judgegrey">Juan</h5>
+                                    <h5 class="mb-1 text-judgegrey">Renjun</h5>
                                     <small class="text-judgegrey">Exhibition</small>
                                 </div>
                             </div>
